Update cSID-light to version 1.1

--- a/original/cSID-light/Makefile
+++ b/original/cSID-light/Makefile
@@ -1,11 +1,12 @@
 
 all: csid-light.c # playlist
 	gcc csid-light.c -s -o csidl `sdl-config --cflags --libs` -lm # -lSDL
+#	i686-w64-mingw32-gcc  csid-light.c  -s  -o csidl.exe  -Wl,-subsystem,console -lmingw32 -lmingwex -mwindows -lSDLmain -lSDL  -I/usr/local/sdlmingw/include  -L/usr/local/sdlmingw/lib
 
 probe: csidl playlist.txt
 	./csidl playlist.txt - - 125
 
-install: 
+install:
 	-cp csidl /usr/local/bin
 	-cp csida /usr/local/bin
 
@@ -14,7 +15,9 @@ playlist:
 	ls music/*.sid > playlist.txt
 
 clean:
-	rm csidl # playlist.txt
+	rm -f csidl csidl.exe csidl-win.o # playlist.txt
 
 uninstall:
-	rm /usr/local/bin/csidl /usr/local/bin/csida
+	rm -f /usr/local/bin/csidl /usr/local/bin/csida
+
+purge: clean uninstall
